--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ layout: default
 
 <div id="beginning">
   <ul>
-    <li><a href="http://www.facebook.com/jason.kalwa"><span>Find me on Facebook</span></a></li>
-    <li><a href="http://twitter.com/jasonkalwa"><span>Find me on Twitter</span></a></li>
-    <li><a href="http://www.flickr.com/photos/58858209@N07/"><span>Find me on Flickr</span></a></li>
+    <li><a href="http://vimeo.com/user9328949"><span>Find me on Vimeo</span></a></li>
+    <li><a href="https://www.youtube.com/user/jasonkalwa/videos"><span>Find me on Youtube</span></a></li>
+    <li><a href="https://www.facebook.com/jason.kalwa"><span>Find me on Flickr</span></a></li>
+    <li><a href="https://twitter.com/jasonkalwa"><span>Send me an Email</span></a></li>
+    <li><a href="http://www.flickr.com/photos/58858209@N07/"><span>Find me on Facebook</span></a></li>
+    <li><a href="http://instagram.com/jck23"><span>Find me on Twitter</span></a></li>
+    <li><a href="https://500px.com/jasonkalwa"><span>Find me on Flickr</span></a></li>
     <li><a href="mailto:jason@jasonkalwa.com"><span>Send me an Email</span></a></li>
-    <li><a href="http://www.facebook.com/jason.kalwa"><span>Find me on Facebook</span></a></li>
-    <li><a href="http://twitter.com/jasonkalwa"><span>Find me on Twitter</span></a></li>
-    <li><a href="http://www.flickr.com/photos/58858209@N07/"><span>Find me on Flickr</span></a></li>
-    <li><a href="mailto:jason@jasonkalwa.com"><span>Send me an Email</span></a></li>
-    <li><a href="http://www.facebook.com/jason.kalwa"><span>Find me on Facebook</span></a></li>
+    <li><a href="https://www.linkedin.com/pub/jason-kalwa/b/b1a/867"><span>Find me on Linkedin</span></a></li>
   </ul>
 </div>
